Add Hickory Color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gold">#FFD700</color>
     <color name="goldenrod">#DAA520</color>
     <color name="darkred">#8B0000</color>
+    <color name="logocolor">#8a383c</color>
 </resources>
