--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/goldenrod</item>
-        <item name="colorPrimaryDark">@color/darkred</item>
+        <item name="colorPrimaryDark">@color/logocolor</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
