--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,12 @@
     android:background="@color/logocolor"
     tools:context="com.example.team6.togo.HomeActivity">
 
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:background="@color/goldenrod"></android.support.v7.widget.Toolbar>-->
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
