--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="firbrick">#B22222</color>
     <color name="maroon">#800000</color>
     <color name="logocolor">#8a383c</color>
+    <color name="lightgrey">#D3D3D3</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="darkgrey">#A9A9A9</color>
 </resources>
