--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.team6.togo.CheckoutActivity"
+    android:background="@color/logocolor"
     android:isScrollContainer="true"
-    android:background="@color/logocolor">
+    tools:context="com.example.team6.togo.CheckoutActivity">
 
     <TextView
         android:id="@+id/Menu"
@@ -26,19 +26,42 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ScrollView
-        android:id="@+id/sv"
-        android:layout_width="368dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_height="448dp"
-        android:background="@color/logocolor"
-        android:layout_marginStart="8dp"
+        android:id="@+id/scrollView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Menu"
+        app:layout_constraintVertical_bias="0.0">
 
-
+        <LinearLayout
+            android:id="@+id/ll"
+            android:layout_width="313dp"
+            android:layout_height="447dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/white"
+            android:isScrollContainer="true"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Menu"></LinearLayout>
     </ScrollView>
 
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Total"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
 
